# lucid-typer-demo

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: device.rs  mod.rs  typing.rs
src-tauri/src/engine/: behaviors.rs  config.rs  core.rs  digraph.rs  errors.rs  events.rs  keyboard_map.rs  mod.rs  pauses.rs  thesaurus.rs  timing.rs
src/components/dashboard/: ActionBar.tsx  ControlBar.tsx  CountdownOverlay.tsx  PreviewPane.tsx  SettingsPanel.tsx  Sidebar.tsx  StatsPanel.tsx  TextInput.tsx  TypingView.tsx  WaveformGraph.tsx
src/components/settings/: PersonalityPicker.tsx  SettingsDrawer.tsx  SpeedSlider.tsx
src/components/shared/: GlassPanel.tsx  GlowButton.tsx  Logo.tsx  StartupSequence.tsx  Toast.tsx
src/hooks/: useTypingEngine.ts
src/lib/: humanizer-api.ts  personalities.ts  supabase.ts  tauri-commands.ts
src/stores/: engine-store.ts  humanizer-store.ts  settings-store.ts  toast-store.ts
src/styles/: globals.css
