[package]
name = "lucid-typer"
version = "0.1.0"
description = "Human typing simulation engine"
authors = ["Lucid Typer"]
edition = "2021"

[lib]
name = "lucid_typer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
log = "0.4"
lazy_static = "1.4"
once_cell = "1.19"
enigo = "0.2"
sha2 = "0.10"
